# bboom_test

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
bboom_test/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py
tests/: conftest.py  factories.py  fixtures.py
tests/posts/: post_test.py
tests/users/: user_test.py
ui/: forms.py  urls.py  views.py
ui/templates/posts/: add_post.html  posts.html
ui/templates/users/: login.html  users.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
